Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@i915_pm_rpm@module-reload - dmesg-warn - Unclaimed write to register 0x62814, WARNING:.*at drivers/gpu/drm/i915/intel_uncore.c:\d+ __unclaimed_reg_debug
https://intel-gfx-ci.01.org/tree/drm-tip/IGT_6611/bat-dg2-8/igt@i915_pm_rpm@module-reload.html
<4> [456.919532] ------------[ cut here ]------------
<4> [456.919543] i915 0000:03:00.0: Unclaimed write to register 0x62814
<4> [456.919559] WARNING: CPU: 8 PID: 5912 at drivers/gpu/drm/i915/intel_uncore.c:1681 __unclaimed_reg_debug+0x68/0x80 [i915]
<4> [456.919682] Modules linked in: i915(+) drm_display_helper drm_kms_helper vgem drm_shmem_helper drm_ttm_helper gpu_sched snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic ledtrig_audio snd_intel_dspcfg snd_hda_codec snd_hwdep snd_hda_core snd_pcm prime_numbers ttm drm_buddy syscopyarea sysfillrect sysimgblt fb_sys_fops fuse x86_pkg_temp_thermal coretemp smsc75xx kvm_intel usbnet mii kvm irqbypass crct10dif_pclmul crc32_pclmul ghash_clmulni_intel e1000e mei_me ptp i2c_i801 mei pps_core i2c_smbus intel_lpss_pci [last unloaded: drm_kms_helper]
<4> [456.919750] CPU: 8 PID: 5912 Comm: i915_pm_rpm Tainted: G U 5.19.0-CI_DRM_11965-g8e9c8a49cee4+ #1
<4> [456.919753] Hardware name: Intel Corporation CoffeeLake Client Platform/CoffeeLake S UDIMM RVP, BIOS CNLSFWR1.R00.X220.B00.2103302221 03/30/2021
<4> [456.919755] RIP: 0010:__unclaimed_reg_debug+0x68/0x80 [i915]
<4> [456.919873] Code: 08 4c 8b 6f 50 4d 85 ed 75 03 4c 8b 2f e8 30 8b 10 e1 41 89 e8 4c 89 e1 4c 89 ea 48 89 c6 48 c7 c7 e8 bf 89 a0 e8 20 64 49 e1 <0f> 0b 48 8b 43 08 83 a8 74 0d 00 00 01 eb a0 66 0f 1f 84 00 00 00
<4> [456.919876] RSP: 0018:ffffc900019079e0 EFLAGS: 00010082
<4> [456.919879] RAX: 0000000000000000 RBX: ffff888117398ef0 RCX: 0000000000000003
<4> [456.919882] RDX: 0000000080000003 RSI: ffffffff82320b0d RDI: 00000000ffffffff
<4> [456.919884] RBP: 0000000000062814 R08: 0000000000000000 R09: c0000000ffff7fff
<4> [456.919886] R10: 0000000000000001 R11: ffffc90001907878 R12: ffffffffa08ee8d2
<4> [456.919888] R13: ffff888102308490 R14: 0000000000000206 R15: 0000000000000000
<4> [456.919890] FS: 00007fe2e46da4c0(0000) GS:ffff88845d800000(0000) knlGS:0000000000000000
<4> [456.919892] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [456.919894] CR2: 0000557feb5772d0 CR3: 000000011ba40002 CR4: 00000000003706e0
<4> [456.919896] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4> [456.919898] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
<4> [456.919900] Call Trace:
<4> [456.919902] <TASK>
<4> [456.919907] fwtable_write32+0x258/0x2f0 [i915]
<4> [456.920028] gen11_display_irq_reset+0xba/0x220 [i915]
<4> [456.920146] intel_irq_reset+0x360/0x440 [i915]
<4> [456.920262] intel_irq_install+0x22/0x100 [i915]
<4> [456.920378] i915_driver_probe+0x743/0xe20 [i915]
<4> [456.920494] ? __pm_runtime_resume+0x4f/0x80
<4> [456.920505] i915_pci_probe+0x53/0x1f0 [i915]
<4> [456.920619] ? _raw_spin_unlock_irqrestore+0x3d/0x70
<4> [456.920628] pci_device_probe+0x95/0x110
<4> [456.920634] really_probe+0x178/0x360
<4> [456.920641] __driver_probe_device+0xfa/0x170
<4> [456.920646] driver_probe_device+0x1a/0x90
<4> [456.920651] __driver_attach+0x9b/0x180
<4> [456.920655] ? __device_attach_driver+0xe0/0xe0
<4> [456.920659] ? __device_attach_driver+0xe0/0xe0
<4> [456.920662] bus_for_each_dev+0x72/0xc0
<4> [456.920669] bus_add_driver+0x162/0x220
<4> [456.920677] driver_register+0x66/0xc0
<4> [456.920680] i915_init+0x1f/0x82 [i915]
<4> [456.920796] ? 0xffffffffa02db000
<4> [456.920799] do_one_initcall+0x53/0x2f0
<4> [456.920803] ? do_init_module+0x1d/0x1c0
<4> [456.920806] ? rcu_read_lock_sched_held+0x51/0x80
<4> [456.920811] ? kmem_cache_alloc_trace+0x1e6/0x260
<4> [456.920819] do_init_module+0x45/0x1c0
<4> [456.920823] load_module+0x1c3a/0x1e10
<4> [456.920849] ? __do_sys_finit_module+0xaf/0x120
<4> [456.920852] __do_sys_finit_module+0xaf/0x120
<4> [456.920869] do_syscall_64+0x37/0x90
<4> [456.920874] entry_SYSCALL_64_after_hwframe+0x63/0xcd
<4> [456.920877] RIP: 0033:0x7fe2e652673d